# QRead.backend

./: .gitignore  LICENSE  README.md  cert.cer  pyproject.toml
alembic/: env.py
alembic/versions/: 002125cefa34_add_deleted_account_status.py  31e6ea4e0dfa_add_app_settings.py  368542b1db41_added_user_account_account_state.py  56e905c92343_add_account_suspension_reason.py  6e657a40b57a_add_book_image.py  721ef0b6f689_added_book_on_loan_and_booktransaction_.py  a14ea8ec0302_init_db.py  f86f2d54aa25_added_fine_reson.py  fa1ec11de3fa_add_book_transaction_extended.py
certs/: cert.cer  cert.pem  key.pem
docs/: swagger.yaml
instance/: config_example.py
server/: __init__.py  config.py
server/exceptions/: __init__.py
server/model/: db.py  tables.py
server/model/repository/: app_settings_repository.py  book_repository.py  book_return_repository.py  book_transaction_repository.py  fine_repository.py  user_account_repository.py
server/model/seed/: seed_db.py  seeds.py
server/model/service/: admin_service.py  base_service.py  common_service.py  librarian_service.py  notification_service.py  transactional_wrapper.py
server/model/service/admin/: admin_service.py
server/model/service/borrower/: borrower_service.py
server/model/service/librarian/: librarian_service.py
server/route/: admin.py  borrower.py  common_route.py  librarian.py  requires_auth_wrapper.py
server/route/admin/: admin.py
server/route/borrower/: borrower.py
server/route/librarian/: librarian.py
server/util/: extensions.py  hasher.py  mailer.py  otp.py
server/utils/: sanitization.py
tests/: conftest.py  extensions.py  test_data.py  test_users.py
tests/test_route/: ntest_b_borrower.py  test_a_common_route.py  test_b_admin.py  test_b_borrower.py  test_common_route.py
