[project]
name = "qread-backend"
version = "0.1.0"
description = "Backend for our QRead FYP project"
authors = [
    {name = "lly02",email = "lly.02@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
